--- a/index.html
+++ b/index.html
@@ -10,40 +10,30 @@
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
+            height: 100vh;
         }
 
         .responsive-iframe-container {
             position: relative;
-            padding-bottom: 56.25%;
+            /* padding-bottom: 56.25%; */
             /* Aspect ratio: 16:9 */
-            padding-top: 30px;
+            /* padding-top: 30px; */
             height: 0;
-            overflow: hidden;
+            /* overflow: hidden; */
         }
 
         .responsive-iframe-container iframe {
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
-            border: 0;
-        }
-
-        .header {
-            text-align: center;
-            padding: 10px;
-            background-color: #007BFF;
-            color: white;
-            font-size: 18px;
+            width: 100vw;
+            height: 100vh;
+            border: 1px solid red;
         }
     </style>
 </head>
 
 <body>
-    <div class="header">
-        Mentimeter Presentation
-    </div>
     <div class="responsive-iframe-container">
         <iframe sandbox="allow-scripts allow-same-origin allow-presentation" allowfullscreen="true"
             allowtransparency="true"
